[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "frappuccino"
author = "Matthias Bussonnier"
author-email = "bussonniermatthias@gmail.com"
home-page = "https://github.com/Carreau/frappuccino"
classifiers = ["License :: OSI Approved :: BSD License"]
requires-python = ">=3.6"
description-file="readme.md"
requires=["pytoml"]


[tool.flit.scripts]
frappuccino = "frappuccino:main"

[tool.frappuccino.configuration]
modules=["astropy"]
